--- a/example_deploy.yml
+++ b/example_deploy.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-access-key-id: ${{ secrets.yourSecret.id }}
+          aws-secret-access-key: ${{ secrets.yourAccessKey }}
+          aws-session-token: ${{ secrets.yourSession }}
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
