--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -90,13 +90,13 @@ jobs:
         run: |
           aws elasticbeanstalk create-application-version \
             --application-name ${{ secrets.EB_APP_NAME }} \
-            --version-label $GITHUB_SHA \
+            --version-label ${{ github.run_id }} \
             --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=flask-app.zip \
             --process
 
           aws elasticbeanstalk update-environment \
             --environment-name ${{ secrets.EB_ENV_NAME }} \
-            --version-label $GITHUB_SHA
+            --version-label ${{ github.run_id}}
 
       - name: Check Elastic Beanstalk Health Status
         run: |
