--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,25 +7,26 @@ on:
       - main  # Jalankan pipeline saat ada push ke branch main
 
 jobs:
-  install:
-    runs-on: ubuntu-latest
+  # we dont install this, except there is tests, linting, etc
+  # install:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.13
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: 3.13
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
 
   build_and_push_ecr:
-    needs: install
+    # needs: install
     runs-on: ubuntu-latest
 
     steps:
